--- a/docs/install/options/docker-compose.mdx
+++ b/docs/install/options/docker-compose.mdx
@@ -73,30 +73,27 @@ Review the [configurations guide]((/install/configurations/environment-variables
 To upgrade to new versions, which are installed using docker compose, perform the following steps. First, open a terminal in the activepieces repository directory and run the following commands.
 
 **1. Run the update script**
-```bash
+Automatically:
+```
 sh tools/update.sh
 ```
-
-
-To upgrade to new versions manually, which are installed using docker compose, perform the following steps. First, open a terminal in the activepieces repository directory and run the following commands.
-
-**1. Pull the new docker compose file**
-```bash
+Manually pull the new docker compose file:
+```
 git pull
 ```
 
-**2. Pull the new images**
-```bash
+**2. Pull the new images**:
+
+```
 docker compose pull
 ```
 
-3. Review changelog for breaking changes
+**3. Review changelog for breaking changes**
 
-<Warning>
-Please review the [Breaking changes](https://activepieces.com/docs/install/breaking-changes) document.
-</Warning>
+Please review the [Breaking changes](~/docs/install/breaking-changes) document.
 
-4. Run the updated docker images
+**4. Run the updated docker images**:
+
 ```
 docker compose up -d --remove-orphans
 ```
